AGRE-2456: API for changing visit statuses
